# zephyr

./: west.yml
boards/arm/pulga/: Kconfig.board  Kconfig.defconfig  board.cmake  pulga-pinctrl.dtsi  pulga.dts  pulga.yaml  pulga_defconfig
boards/caninos/poodle-toy-v1/: board.yml  poodle-toy-v1.dts  poodle-toy-v1_defconfig
boards/caninos/poodleino-toy-v1/: Kconfig.poodleino-toy-v1  board.yml  poodleino-toy-v1.dts  poodleino-toy-v1.yml  poodleino-toy-v1_defconfig
boards/caninos/puppy-testboard/: Kconfig.defconfig  Kconfig.puppy-testboard  board.yml  puppy-testboard.dts  puppy-testboard.yml  puppy-testboard_defconfig
cmake/: mcuboot.cmake
drivers/gpio/: CMakeLists.txt  Kconfig  gpio_puppy.c
drivers/i2c/: CMakeLists.txt  Kconfig  i2c_puppy.c  i2c_puppy.h
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  Kconfig.puppy  intc_puppy.c
drivers/pwm/: CMakeLists.txt  Kconfig  pwm_puppy.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.puppy  uart_puppy.c  uart_puppy.h
drivers/spi/: CMakeLists.txt  Kconfig  spi_context.h  spi_puppy.c  spi_puppy.h
drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.puppy  puppy_timer.c
soc/caninos/: CMakeLists.txt  init.S  linker.ld  puppy_event.c  puppy_irq.c  soc.h  soc_event.h  soc_irq.S  soc_offsets.h  soc_pad.h  soc_udma.h
soc/caninos/puppy/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  puppy_idle.c  soc.h  soc.yml  soc_context.h  soc_event.h  vector.S
soc/caninos/puppy-v1/: Kconfig.defconfig
soc/caninos/puppy_v1/: Kconfig  Kconfig.defconfig
soc/caninos/puppy_v2/: Kconfig  Kconfig.defconfig
(+13 files in other folders)
